2010-12-15  Jan Erik Hanssen  <jhanssen@sencha.com>

Reviewed by Andreas Kling.

        [Qt][WK2] webkit2 does not compile on OS X
        https://bugs.webkit.org/show_bug.cgi?id=50128

        prctl(2) is only available on Linux, so use an atexit handler for killing
        all the child processes when the process is exiting.

        * UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
        (WebKit::cleanupProcesses):
        (WebKit::QtWebProcess::QtWebProcess):
        (WebKit::QtWebProcess::processStateChanged):
        (WebKit::ProcessLauncherHelper::instance):

Canonical link: https://commits.webkit.org/64455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74108 268f45cc-cd09-0410-ab3c-d52691b4dbfc